--- a/scss/TimpMobile/_assets/_headlings.scss
+++ b/scss/TimpMobile/_assets/_headlings.scss
@@ -3,3 +3,9 @@
   font-size: 1.5em;
   font-weight: 500;
 }
+
+.a-h3 {
+  font-family: var(--ff-headline);
+  font-size: 1.25em;
+  font-weight: 500;
+}
