--- a/scss/TimpMobile/main.scss
+++ b/scss/TimpMobile/main.scss
@@ -21,22 +21,23 @@
   --ff-headline: 'Lora', sans-serif;
   --ff: 'Jost', sans-serif;
 
-  --mainWidth: 100%;
-  --padding-side: 2.5vmax;
-  --inputPad: .875rem;
+  //--mainWidth: 100%;
+  //--padding-side: 2.5vmax;
+  --inputPad: .75rem;
   --inputPad-top: .5rem;
 
-  @media screen and (min-width: 64em) {
+  /*@media screen and (min-width: 64em) {
     --padding-side: 3.125em;
   }
   @media screen and (min-width: 75em) {
     --mainWidth: 72.5em;
     --padding-side: 0;
-  }
+  }*/
 }
 
 @import "_assets/mixin";
-@import "_assets/headlings";
+@import "_assets/extends";
+@import "_assets/icons";
 
 //*********************************************
 //		Blocks
@@ -46,3 +47,9 @@
 @import "parts/button";
 @import "parts/popup";
 @import "parts/login";
+@import "parts/context-menu";
+@import "parts/main";
+@import "parts/top";
+@import "parts/bottom";
+@import "parts/card";
+
