--- a/scss/_base/preloader.scss
+++ b/scss/_base/preloader.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 @import "../_base/functions";
 @import "../_base/mixins";
 
@@ -13,9 +15,11 @@
   // Маленькие для вставки в попап
   &.--mini {
     flex-direction: row;
+
     & .a-preloader__item {
       --preloaderSize: 40;
     }
+
     & .a-preloader__text {
       padding-left: 1em;
       padding-top: 0;
@@ -60,26 +64,26 @@
 
     @for $i from 1 through $count {
       .a-preloader__item > div:nth-child(#{$i}) {
-        transform: rotateZ(((360 / $count) * ($i - 1)) + deg);
+        transform: rotateZ(((math.div(360, $count)) * ($i - 1)) + deg);
         animation: rotateCircle + $i $time + s infinite linear;
         z-index: $count - $i;
       }
       @keyframes rotateCircle#{$i} {
-        #{percentage(((50 / $count) * ($i - 1)) / 100)} {
+        #{percentage(math.div(math.div(50, $count) + 0.0001 * $i - 1, 100))} {
           opacity: 0;
         }
-        #{percentage((((50 / $count) + 0.0001) * ($i - 1)) / 100)} {
+        #{percentage(math.div(math.div(50, $count) + 0.0001 * $i - 1, 100))} {
           opacity: 1;
-          transform: rotateZ((0 - ((360 / $count) * ($i - 2))) + deg);
+          transform: rotateZ((0 - ((math.div(360, $count)) * ($i - 2))) + deg);
         }
-        #{percentage((((50 / $count) * ($i - 0)) + 2) / 100)} {
-          transform: rotateZ((0 - ((360 / $count) * ($i - 1))) + deg);
+        #{percentage(math.div(math.div(50, $count) * $i - 0 + 2, 100))} {
+          transform: rotateZ((0 - ((math.div(360, $count)) * ($i - 1))) + deg);
         }
-        #{percentage(((50 + ((50 / $count) * ($i - 0))) + 2) / 100)} {
-          transform: rotateZ((0 - ((360 / $count) * ($i - 1))) + deg);
+        #{percentage(math.div(50 + math.div(50, $count) * $i - 0 + 2, 100))} {
+          transform: rotateZ((0 - ((math.div(360, $count)) * ($i - 1))) + deg);
         }
         100% {
-          transform: rotateZ((0 - ((360 / $count) * ($count - 1))) + deg);
+          transform: rotateZ((0 - ((math.div(360, $count)) * ($count - 1))) + deg);
           opacity: 1;
         }
       }
