--- a/scss/TimpMobile/_assets/_icons.scss
+++ b/scss/TimpMobile/_assets/_icons.scss
@@ -11,4 +11,7 @@
   @include icon(arrow-right, true);
   @include icon(arrow-left-sm, true);
   @include icon(arrow-right-sm, true);
+  @include icon(person, true);
+  @include icon(trash, true);
+  @include icon(person-add, true);
 }
