--- a/scss/TimpMobile/main.scss
+++ b/scss/TimpMobile/main.scss
@@ -48,7 +48,7 @@
 @import "parts/popup";
 @import "parts/login";
 @import "parts/context-menu";
-@import "parts/main";
+@import "parts/container";
 @import "parts/top";
 @import "parts/bottom";
 @import "parts/card";
